fix: icon alignment in toast

--- a/src/components/toast/components/toast-display/toast-display.module.css
+++ b/src/components/toast/components/toast-display/toast-display.module.css
@@ -54,7 +54,6 @@
 
 .contentArea {
 	flex-grow: 1;
-	padding-top: 2px;
 }
 
 .title {
